apps/pgadmin4/60.Service.yml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin4
  namespace: pgadmin4
spec:
  ports:
    - name: http
      port: 80
      targetPort: pgadmin4
  selector:
    app: pgadmin4
  sessionAffinity: None
  type: ClusterIP
