apps/pgadmin4/70.Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin4-ingress
  namespace: pgadmin4
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: nginx-ingress-microk8s
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Access-Control-Allow-Origin https://web.prod.k8s.home always;
    prometheus.io/port: '9113'
    spec.ingressClassName: public
spec:
  rules:
  - host: pgadmin4.prod.k8s.home
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pgadmin4
              port:
                number: 80
